Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19675

dwExpWinVer is not populated in both CLIENTINFO and THREADINFO

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Win32SS
    • None

    Description

      https://git.reactos.org/?p=reactos.git&a=search&h=HEAD&st=grep&s=dwExpWinVer

      dwExpWinVer is a version info value.
      Currently dwExpWinVer is zero.
      We have to populate dwExpWinVer with a correct value.

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              katayama_hirofumi_mz Katayama Hirofumi MZ
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: